--- a/invitroTKstats/vignettes/Clint_vignette.Rmd
+++ b/invitroTKstats/vignettes/Clint_vignette.Rmd
@@ -1,6 +1,12 @@
 ---
 title: "Clint"
-output: rmarkdown::html_vignette
+author: "US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov"
+output:
+  rmdformats::readthedown:
+    fig_retina: false
+    toc_depth: 3
+  params:
+    my_css: css/rmdformats.css
 vignette: >
   %\VignetteIndexEntry{Clint}
   %\VignetteEngine{knitr::rmarkdown}
@@ -9,7 +15,9 @@ vignette: >
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
-  collapse = TRUE
+  collapse = TRUE,
+  comment = "#>",
+  fig.align = 'center'
 )
 ```
 
@@ -20,7 +28,7 @@ This vignette guides users on how to estimate intrinsic hepatic clearance (Cl~in
 The mass spectrometry data should be collected from an assay that uses cryopreserved hepatocyte suspension (Shibata et al. 2002) as seen in Figure 1. 
 
 ```{r, echo = FALSE, out.width = "100%", fig.cap = "Fig 1: Cl~int~ experimental set up", fig.topcaption = TRUE, fig.align = "center"}
-knitr::include_graphics("Clint_diagram.png")
+knitr::include_graphics("img/clint_diagram.png")
 ```
 
 ### Suggested packages for use with this vignette 
