--- a/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
+++ b/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
@@ -1,6 +1,12 @@
 ---
 title: "Data Guide Creation and Level-0 Data Compilation"
-output: rmarkdown::html_vignette
+author: "US EPA's Center for Computational Toxicology and Exposure ccte@epa.gov"
+output:
+  rmdformats::readthedown:
+    fig_retina: false
+    toc_depth: 3
+  params:
+    my_css: css/rmdformats.css
 bibliography: '`r system.file("REFERENCES.bib", package="invitroTKstats")`'
 vignette: >
   %\VignetteIndexEntry{data_guide_and_LO}
@@ -11,7 +17,8 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.align = 'center'
 )
 ```
 
