update references to BibTeX and correct believed mis-references

--- a/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
+++ b/invitroTKstats/vignettes/Data-guide-and-L0_vignette.Rmd
@@ -75,7 +75,7 @@ The first thing we need to do for the pipelining process is to construct a data 
 
 For users to replicate this vignette, it is necessary to clone the `invitroTKstats` package repository which contains the "data-raw/Kreutz-Clint" sub-directory. 
 
-The "Kreutz-Clint" sub-directory contains raw data files with gas chromatography-tandem mass spectrometry (GC-MS/MS) analyses of a subset of PFAS alcohols, amides, and acrylates \insertCite{kreutz2023category}{invitroTKstats}. 
+The "Kreutz-Clint" sub-directory contains raw data files with gas chromatography-tandem mass spectrometry (GC-MS/MS) analyses of a subset of PFAS alcohols, amides, and acrylates (@kreutz2023category). 
 
 ```{r raw_data_dir}
 # the path to the applicable sub-directory after the `invitroTKstats` package repository is cloned and the R project is opened
