--- a/invitroTKstats/inst/REFERENCES.bib
+++ b/invitroTKstats/inst/REFERENCES.bib
@@ -106,3 +106,14 @@
   pages={56--74},
   year={2025}
 }
+
+@article{breen2021high,
+  title={High-throughput PBTK models for in vitro to in vivo extrapolation},
+  author={Breen, Miyuki and Ring, Caroline L and Kreutz, Anna and Goldsmith, Michael-Rock and Wambaugh, John F},
+  journal={Expert opinion on drug metabolism \& toxicology},
+  volume={17},
+  number={8},
+  pages={903--921},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
